--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<h2>Who Am I?</h2>
 							</header>
 							<p>I'm a Cloud Engineer on a journey, with experience in Linux, GCP, AWS, Azure, OCI, Databricks, Generative AI, and Cloud Native Technologies.</p>
-							<p>I have a passion for learning and music, and thought it would be helpful to combine both, since not all of us learn in the same way, have access to the same resources, and need extra tools in order to retain information</p>
+							<p>I have a passion for learning and music and thought it would be helpful to combine both, since not all of us learn in the same way, have access to the same resources, and need extra tools in order to retain information</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
@@ -64,9 +64,9 @@
 								<h2>Learning Resources, Lofi Music<br />
 								and Cloud Project Ideas</h2>
 							</header>
-							<p>I will be sharing my learning resources, including ones I have used to learn and implement.</p>
-							<p>On my YouTube is where I will be sharing the creative works that I produced in tandem with my cloud skills and Generative AI. Many chill LoFi beats, but also study crams that I used, which I hope you find useful.</p>
-							<p>In addition to giving you a full view into my stack, and workflow setup, there will be project ideas for you to gain the skills needed to become competent cloud or cloud-native engineers..</p>
+							<p>I will be sharing <a href="https://github.com/catinahat85/gitgudatcloudnative">my learning resources</a>, including ones I have used to learn and implement.</p>
+							<p>On my <a href="https://www.youtube.com/@CloudFiBeats"><strong>Youtube</strong></a> is where I will be sharing the creative works that I produced in tandem with my cloud skills and Generative AI. Many chill LoFi beats, but also study crams that I used, which I hope you find useful.</p>
+							<p>In addition to giving you a full view into <a href="https://github.com/catinahat85/html"></a><strong>my stack and workflow setup</strong></a>, there will be project ideas for you to gain the skills needed to become competent cloud or cloud-native engineers..</p>
 						</div>
 					</div>
 				</div>
@@ -117,9 +117,9 @@
 					</header>
 					<p>Subscribe, Listen, Learn or Collaborate</p>
 					<ul class="actions special">
-						<li><a href="#" class="button wide primary">GitHub</a></li>
-						<li><a href="#" class="button wide">Youtube</a></li>
-						<li><a href="#" class="button wide">Linkedin</a></li>
+						<li><a href="https://github.com/catinahat85/gitgudatcloudnative" class="button wide primary">GitHub</a></li>
+						<li><a href="https://www.youtube.com/@CloudFiBeats" class="button wide">Youtube</a></li>
+						<li><a href="https://www.linkedin.com/in/jake-p-8348127b/" class="button wide">Linkedin</a></li>
 					</ul>
 				</div>
 			</section>
@@ -198,9 +198,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</ol>
 								<h5>Icons</h5>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-									<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://www.youtube.com/@CloudFiBeats" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+									<li><a href="https://github.com/catinahat85/gitgudatcloudnative" class="icon brands fa-github"><span class="label">Github</span></a></li>
+									<li><a href="https://www.linkedin.com/in/jake-p-8348127b/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 								</ul>
 							</div>
 						</div>
@@ -444,9 +444,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-youtube"><span class="label">Linkedin</span></a></li>
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+					<li><a href="https://www.youtube.com/@CloudFiBeats" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
+					<li><a href="https://github.com/catinahat85/gitgudatcloudnative" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/jake-p-8348127b/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>The "Ease Into Kubernetes" books are creative works and are neither made, endorsed, nor sanctioned by the Cloud Native Computing Foundation (CNCF) or The Linux Foundation. The content and narratives in this book are the product of the author's imagination and are used fictitiously. Any resemblance to actual events, locales, real persons, living or dead, or actual entities is purely coincidental. This book does not imply any affiliation with or endorsement by the CNCF or The Linux Foundation.
