--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<h2>Learning Resources, Lofi Music<br />
 								and Cloud Project Ideas</h2>
 							</header>
-							<p>I will be sharing <a href="https://github.com/catinahat85/gitgudatcloudnative">my learning resources</a>, including ones I have used to learn and implement.</p>
+							<p>I will be sharing <a href="https://github.com/catinahat85/gitgudatcloudnative"><strong>my learning resources</strong></a>, including ones I have used to learn and implement.</p>
 							<p>On my <a href="https://www.youtube.com/@CloudFiBeats"><strong>Youtube</strong></a> is where I will be sharing the creative works that I produced in tandem with my cloud skills and Generative AI. Many chill LoFi beats, but also study crams that I used, which I hope you find useful.</p>
 							<p>In addition to giving you a full view into <a href="https://github.com/catinahat85/html"></a><strong>my stack and workflow setup</strong></a>, there will be project ideas for you to gain the skills needed to become competent cloud or cloud-native engineers..</p>
 						</div>
