--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
 					</header>
 					<p>Subscribe, Listen, Learn or Collaborate</p>
 					<ul class="actions special">
-						<li><a href="https://github.com/catinahat85/gitgudatcloudnative" class="button wide primary">GitHub</a></li>
+						<li><a href="https://github.com/catinahat85/gitgudatcloudnative" class="button wide primary">GitHub - Learn</a></li>
+						<li><a href="https://github.com/catinahat85/html" class="button wide primary">GitHub - My Work</a></li>
 						<li><a href="https://www.youtube.com/@CloudFiBeats" class="button wide">Youtube</a></li>
 						<li><a href="https://www.linkedin.com/in/jake-p-8348127b/" class="button wide">Linkedin</a></li>
 					</ul>
@@ -199,7 +200,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								<h5>Icons</h5>
 								<ul class="icons">
 									<li><a href="https://www.youtube.com/@CloudFiBeats" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
-									<li><a href="https://github.com/catinahat85/gitgudatcloudnative" class="icon brands fa-github"><span class="label">Github</span></a></li>
+									<li><a href="https://github.com/catinahat85" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									<li><a href="https://www.linkedin.com/in/jake-p-8348127b/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 								</ul>
 							</div>
