--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<span class="icon solid major fa-cloud"></span>
 					<h1>Welcome to <strong>CloudFi</strong>, a personal project of mine<br />
 					sharing my knowledge of the cloud with <a href="https://www.youtube.com/@CloudFiBeats"><strong>music</strong></a>.</h1>
-					<p>See what I have cooking on <a href="https://github.com/catinahat85"></a><strong>my Github</strong></a>.<p>
+					<p>See what I have cooking on <a href="https://github.com/catinahat85"><strong>my Github</strong></a>.</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">See More</a></li>
 					</ul>
@@ -66,7 +66,7 @@
 							</header>
 							<p>I will be sharing <a href="https://github.com/catinahat85/gitgudatcloudnative"><strong>my learning resources</strong></a>, including ones I have used to learn and implement.</p>
 							<p>On my <a href="https://www.youtube.com/@CloudFiBeats"><strong>Youtube</strong></a> is where I will be sharing the creative works that I produced in tandem with my cloud skills and Generative AI. Many chill LoFi beats, but also study crams that I used, which I hope you find useful.</p>
-							<p>In addition to giving you a full view into <a href="https://github.com/catinahat85/html"></a><strong>my stack and workflow</strong></a>, there will be project ideas for you to gain the skills needed to become competent cloud or cloud-native engineers..</p>
+							<p>In addition to giving you a full view into <a href="https://github.com/catinahat85/html"><strong>my stack and workflow</strong></a>, there will be project ideas for you to gain the skills needed to become competent cloud or cloud-native engineers..</p>
 						</div>
 					</div>
 				</div>
