--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							<h3>Made for Children</h3>
 							<p>Cloud computing and Containers made simple. The focus was to make these books feel like Kubernetes explained, but ELI5. You'll get it, and they'll love it.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://www.amazon.com/Ease-Into-Kubernetes/dp/B0CLKVVZ55" class="button">See on Amazon</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
@@ -94,7 +94,7 @@
 							<h3>Fun and Quirky</h3>
 							<p>There's action, adventure, magic, humor, quirk and learning. These stories will spark curiosity and inspire the next generation of engineers and cloud-native heroes!</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://a.co/d/eA4denP" class="button">See Latest Book</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
@@ -102,7 +102,7 @@
 							<h3>Open Source</h3>
 							<p>Published under CC-BY 4.0, using CNCF owned characters in conjunction with my original characters, but would love to see your takes on them. Just give attribution.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://github.com/catinahat85/gitgudatcloudnative/tree/main/ebooks" class="button">Free Downloads</a></li>
 							</ul>
 						</div>
 					</div>
@@ -119,7 +119,7 @@
 					<ul class="actions special">
 						<li><a href="https://github.com/catinahat85/gitgudatcloudnative" class="button wide primary">GitHub - Learn</a></li>
 						<li><a href="https://github.com/catinahat85/html" class="button wide primary">GitHub - My Work</a></li>
-						<li><a href="https://www.youtube.com/@CloudFiBeats" class="button wide">Youtube</a></li>
+						<li><a href="https://www.youtube.com/@CloudFiBeats" class="button wide">Study Crams on Youtube</a></li>
 					</ul>
 				</div>
 			</section>
