--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<section id="footer">
 				<ul class="icons">
 					<li><a href="https://www.youtube.com/@CloudFiBeats" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
-					<li><a href="https://github.com/catinahat85/gitgudatcloudnative" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/catinahat85" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="https://www.linkedin.com/in/jake-p-8348127b/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 				</ul>
 				<ul class="copyright">
