--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							</header>
 							<p>I will be sharing <a href="https://github.com/catinahat85/gitgudatcloudnative"><strong>my learning resources</strong></a>, including ones I have used to learn and implement.</p>
 							<p>On my <a href="https://www.youtube.com/@CloudFiBeats"><strong>Youtube</strong></a> is where I will be sharing the creative works that I produced in tandem with my cloud skills and Generative AI. Many chill LoFi beats, but also study crams that I used, which I hope you find useful.</p>
-							<p>In addition to giving you a full view into <a href="https://github.com/catinahat85/html"><strong>my stack and workflow</strong></a>, there will be project ideas for you to gain the skills needed to become competent cloud or cloud-native engineers..</p>
+							<p>In addition to giving you a full view into <a href="https://github.com/catinahat85/cloudfilive"><strong>my stack and workflow</strong></a>, there will be project ideas for you to gain the skills needed to become competent cloud or cloud-native engineers..</p>
 						</div>
 					</div>
 				</div>
@@ -100,7 +100,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<h3>Open Source</h3>
-							<p>Published under CC-BY 4.0, using CNCF owned characters in conjunction with my original characters, but would love to see your takes on them. Just give attribution.</p>
+							<p>Published under CC-BY 4.0, using CNCF-owned characters in conjunction with my original characters, but I would love to see your takes on them. Just give attribution.</p>
 							<ul class="actions special">
 								<li><a href="https://github.com/catinahat85/gitgudatcloudnative/tree/main/ebooks" class="button">Free Downloads</a></li>
 							</ul>
@@ -118,7 +118,7 @@
 					<p>Subscribe, Listen, Learn or Collaborate</p>
 					<ul class="actions special">
 						<li><a href="https://github.com/catinahat85/gitgudatcloudnative" class="button wide primary">GitHub - Learn</a></li>
-						<li><a href="https://github.com/catinahat85/html" class="button wide primary">GitHub - My Work</a></li>
+						<li><a href="https://github.com/catinahat85/cloudfilive" class="button wide primary">GitHub - My Work</a></li>
 						<li><a href="https://www.youtube.com/@CloudFiBeats" class="button wide">Study Crams on Youtube</a></li>
 					</ul>
 				</div>
