--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 								<h2>Who Am I?</h2>
 							</header>
 							<p>I'm a Cloud Engineer on a journey, with experience in Linux, GCP, AWS, Azure, OCI, Databricks, Generative AI, and Cloud Native Technologies.</p>
-							<p>I have a passion for learning and music and thought it would be helpful to combine both, since not all of us learn in the same way, have access to the same resources, and need extra tools in order to retain information</p>
+							<p>I have a passion for learning and music and thought it would be helpful to combine both, since not all of us learn in the same way, have access to the same resources, and need extra tools in order to retain information.</p>
+							<p>One of my main missions is to bring knowledge of cloud native computing to the underpriviledged, including latino/a/e people globally and to minorities in the USA, as it is a field where we can step up and make a difference due to the lack of standardized education.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
@@ -103,6 +104,41 @@
 							<p>Published under CC-BY 4.0, using CNCF-owned characters in conjunction with my original characters, but I would love to see your takes on them. Just give attribution.</p>
 							<ul class="actions special">
 								<li><a href="https://github.com/catinahat85/gitgudatcloudnative/tree/main/ebooks" class="button">Free Downloads</a></li>
+							</ul>
+						</div>
+					</div>
+				
+			</section>
+			<section id="three" class="main style1 special">
+				<div class="container">
+					<header class="major">
+						<h2>Browse Content</h2>
+						<p>Music, Learn or Projects</p>
+					</header>
+					<p>Learn about cloud and cloud native while having fun</p>
+					<div class="row gtr-150">
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic07.jpg" alt="" /></span>
+							<h3>CloudFiBeats</h3>
+							<p>Youtube channel. My own beats, but using tools like Google Cloud TTS, AWS Polly, AWS Lambda</p>
+							<ul class="actions special">
+								<li><a href="https://www.youtube.com/@CloudFiBeats" class="button">Subscribe Now</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic09.jpg" alt="" /></span>
+							<h3>Learning Resources</h3>
+							<p>Collected courses, tutorials, videos about containers, kubernetes, cloud computing and more. Learn for free.</p>
+							<ul class="actions special">
+								<li><a href="https://github.com/catinahat85/gitgudatcloudnative" class="button">Start Learning</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic08.jpg" alt="" /></span>
+							<h3>My Blog</h3>
+							<p>With my thoughts, ideas and opinions on technology and developments.</p>
+							<ul class="actions special">
+								<li><a href="https://cloudfiblog7.wordpress.com/" class="button">See My Rants</a></li>
 							</ul>
 						</div>
 					</div>
