--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<h2>Who Am I?</h2>
 							</header>
 							<p>I'm a Cloud Engineer on a journey, with experience in Linux, GCP, AWS, Azure, OCI, Databricks, Generative AI, and Cloud Native Technologies.</p>
-							<p>I have a passion for learning and music and thought it would be helpful to combine both, since not all of us learn in the same way, have access to the same resources, and need extra tools in order to retain information.</p>
+							<p>I have a passion for learning, teaching and music and thought it would be helpful to combine both, since not all of us learn in the same way, have access to the same resources, and need extra tools in order to retain information. I want to empower the unempowered through tech.</p>
 							<p>One of my main missions is to bring knowledge of cloud native computing to the underpriviledged, including latino/a/e people globally and to minorities in the USA, as it is a field where we can step up and make a difference due to the lack of standardized education.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
@@ -153,8 +153,8 @@
 					</header>
 					<p>Subscribe, Listen, Learn or Collaborate</p>
 					<ul class="actions special">
-						<li><a href="https://github.com/catinahat85/gitgudatcloudnative" class="button wide primary">GitHub - Learn</a></li>
-						<li><a href="https://github.com/catinahat85/cloudfilive" class="button wide primary">GitHub - My Work</a></li>
+						<li><a href="https://chatgpt.com/g/g-rf6wyH9MH-when-2-k8s" class="button wide primary">Try My Custom K8s GPT</a></li>
+						<li><a href="https://github.com/catinahat85/cloudfilive" class="button wide primary">See How I Made This Site</a></li>
 						<li><a href="https://www.youtube.com/@CloudFiBeats" class="button wide">Study Crams on Youtube</a></li>
 					</ul>
 				</div>
