--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								<ul class="icons">
 									<li><a href="https://www.youtube.com/@CloudFiBeats" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
 									<li><a href="https://github.com/catinahat85" class="icon brands fa-github"><span class="label">Github</span></a></li>
-									<li><a href="https://www.linkedin.com/in/jake-p-8348127b/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://x.com/beatsinthecloud/" class="icon brands fa-twitter"><span class="label">Twitter/X</span></a></li>
 								</ul>
 							</div>
 						</div>
