--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<ul class="icons">
 					<li><a href="https://www.youtube.com/@CloudFiBeats" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
 					<li><a href="https://github.com/catinahat85" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://www.linkedin.com/in/jake-p-8348127b/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+					<li><a href="https://x.com/beatsinthecloud" class="icon brands alt fa-twitter"><span class="label">Twitter/X</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>The "Ease Into Kubernetes" books are creative works and are neither made, endorsed, nor sanctioned by the Cloud Native Computing Foundation (CNCF) or The Linux Foundation. The content and narratives in this book are the product of the author's imagination and are used fictitiously. Any resemblance to actual events, locales, real persons, living or dead, or actual entities is purely coincidental. This book does not imply any affiliation with or endorsement by the CNCF or The Linux Foundation.
