--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 							<header class="major">
 								<h2>Who Am I?</h2>
 							</header>
-							<p>I'm a Cloud Engineer on a journey, with experience in Linux, GCP, AWS, Azure, OCI, Databricks, Generative AI, and Cloud Native Technologies, namely Kubernetes and Docker. I've done things like train my own GPT model for SMEs to evaluate if K8s is right for them, to deploying this site with K8s with automated CI/CD and monitoring and observability.</p>
-							<p>Why would I do that? Well, because I have a passion for learning, teaching, AI, and music and thought it would be helpful to combine them all, since not all of us learn in the same way, have access to the same resources, and need extra tools to retain information. I want to empower the unempowered through tech.</p>
-							<p>One of my main missions is to bring knowledge of cloud native computing to the underprivileged, including Latino/a/e people globally and to minorities in the USA, as it is a field where we can step up and make a difference due to the lack of standardized education.</p>
+							<p>I'm a Cloud Engineer on a journey, with experience in Linux, GCP, AWS, Azure, OCI, Databricks, Generative AI, Cloud Native Technologies, Kubernetes, and Docker. I've trained my own GPT model for SMEs to evaluate if K8s is right for them, to deploy this site with K8s with automated CI/CD and monitoring and observability.</p>
+							<p>Why would I do that? I have a passion for learning, teaching, AI, and music, and thought it would be helpful to combine them all, since not all of us learn in the same way, have access to the same resources, and need extra tools to retain information. I want to empower the unempowered through tech.</p>
+							<p>One of my main missions is to bring knowledge of cloud-native computing to the underprivileged, including Latino/a/e people globally and to minorities in the USA, as it is a field where we can step up and make a difference due to the lack of standardized education.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
