--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
 					<h1>Welcome to <strong>CloudFi</strong>, a personal project of mine<br />
-					sharing my knowledge of the cloud with <a href="https://www.youtube.com/@CloudFiBeats"><strong>music</strong></a>.</h1>
+					sharing my knowledge of cloud technologies <a href="https://www.youtube.com/@CloudFiBeats"><strong>music</strong></a>.</h1>
 					<p>See what I have cooking on <a href="https://github.com/catinahat85"><strong>my Github</strong></a>.</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">See More</a></li>
@@ -35,7 +35,7 @@
 							<header class="major">
 								<h2>Who Am I?</h2>
 							</header>
-							<p>I'm a learning Cloud Engineer, with experience in Linux, GCP, AWS, Azure, OCI, Databricks, Generative AI, Docker, Kubernetes, and Docker. I've trained my own GPT model for SMEs to evaluate if K8s is right for them, to deploy this site with K8s with automated CI/CD and monitoring and observability.</p>
+							<p>I'm a learning Cloud Engineer, with experience in Linux, GCP, AWS, Azure, OCI, Databricks, Generative AI, Kubernetes, and Docker. I've trained my own GPT model for SMEs to evaluate if K8s is right for them, to deploy this site with K8s with automated CI/CD and monitoring and observability.</p>
 							<p>Why would I do that? I have a passion for learning, teaching, AI, and music, and thought it would be helpful to combine them all, since not all of us learn in the same way, have access to the same resources, and need extra tools to retain information. I want to empower the unempowered through tech.</p>
 							<p>One of my main missions is to bring knowledge of cloud-native computing to the underprivileged, including Latino/a/e people globally and to minorities in the USA, as it is a field where we can step up and make a difference due to the lack of standardized education.</p>
 						</div>
