--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<span class="icon solid major fa-cloud"></span>
 					<h1>Welcome to <strong>CloudFi</strong>, a personal project of mine<br />
 					sharing my knowledge of cloud technologies <a href="https://www.youtube.com/@CloudFiBeats"><strong>music</strong></a>.</h1>
-					<p>See what I have cooking on <a href="https://github.com/catinahat85"><strong>my Github</strong></a>.</p>
+					<p>See what I'm cooking on <a href="https://github.com/catinahat85"><strong>my Github</strong></a>.</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">See More</a></li>
 					</ul>
