--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
-					<h1>Welcome to <strong>CloudFi</strong>, a personal project of mine<br />
+					<h1>Welcome to <strong>CloudFi</strong>, my personal project<br />
 					sharing my knowledge of cloud technologies <a href="https://www.youtube.com/@CloudFiBeats"><strong>music</strong></a>.</h1>
 					<p>See what I'm cooking on <a href="https://github.com/catinahat85"><strong>my Github</strong></a>.</p>
 					<ul class="actions special">
