--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
 					<h1>Welcome to <strong>CloudFi</strong>, my personal project<br />
-					sharing my knowledge of cloud technologies <a href="https://www.youtube.com/@CloudFiBeats"><strong>music</strong></a>.</h1>
+					sharing my knowledge of cloud technologies with <a href="https://www.youtube.com/@CloudFiBeats"><strong>music</strong></a>.</h1>
 					<p>See what I'm cooking on <a href="https://github.com/catinahat85"><strong>my Github</strong></a>.</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">See More</a></li>
