--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<header class="major">
 								<h2>Who Am I?</h2>
 							</header>
-							<p>I'm a learning Cloud Engineer, with experience in Linux, GCP, AWS, Azure, OCI, Databricks, Generative AI, Kubernetes, and Docker. I've trained my own GPT model for SMEs to evaluate if K8s is right for them, to deploy this site with K8s with automated CI/CD and monitoring and observability.</p>
+							<p>I'm a learning Cloud Engineer, with experience in Linux, GCP, AWS, Azure, OCI, Databricks, Generative AI, Docker, and Kubernetes I've trained my own GPT model for SMEs to evaluate if K8s is right for them. This site is over-engineered with K8s, automated CI/CD, monitoring and observability.</p>
 							<p>Why would I do that? Because my passion for learning, teaching, AI, and music, and thought it would be helpful to combine them all, since not all of us learn in the same way, have access to the same resources, and need extra tools to retain information. I want to empower the unempowered through tech.</p>
 							<p>One of my main missions is to bring knowledge of cloud-native computing to the underprivileged, including Latino/a/e people globally and to minorities in the USA, as it is a field where we can step up and make a difference due to the lack of standardized education.</p>
 						</div>
