--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
 							<h3>Fun and Quirky</h3>
-							<p>There's action, adventure, magic, humor, quirk and learning. These stories will spark curiosity and inspire the next generation of engineers and cloud-native heroes!</p>
+							<p>There's action, adventure, magic, humor, and learning. These stories will spark curiosity and inspire the next generation of engineers and cloud-native heroes!</p>
 							<ul class="actions special">
 								<li><a href="https://a.co/d/eA4denP" class="button">See Latest Book</a></li>
 							</ul>
