--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<h2>Who Am I?</h2>
 							</header>
 							<p>I'm a learning Cloud Engineer, with experience in Linux, GCP, AWS, Azure, OCI, Databricks, Generative AI, Docker, and Kubernetes. I trained my own GPT model for SMEs to evaluate if K8s is right for them. This site is over-engineered with K8s, automated CI/CD, monitoring and observability.</p>
-							<p>Why would I do that? Because of my passion for learning, teaching, AI, and music, and thought it would be helpful to combine them all, since not all of us learn in the same way, have access to the same resources, and need extra tools to retain information. I want to empower the unempowered through tech.</p>
+							<p>Why would I do that? Because of my passion for learning, teaching, AI, and music, and thought it would be helpful to combine them all, since not all of us learn in the same way, have access to the same resources, and need extra tools to learn. I want to empower the unempowered through tech.</p>
 							<p>One of my missions is to bring knowledge of cloud-native computing to the underprivileged, including Latino/a/e people globally and to minorities in the USA, as it is a field where we can step up and make a difference due to the lack of standardized education.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
