--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								<h2>Learning Resources, Lofi Music<br />
 								and Cloud Project Ideas</h2>
 							</header>
-							<p>I will be sharing <a href="https://github.com/catinahat85/gitgudatcloudnative"><strong>my learning resources</strong></a>, including ones I have used to learn and implement.</p>
+							<p>I'll be sharing <a href="https://github.com/catinahat85/gitgudatcloudnative"><strong>my learning resources</strong></a>, including ones I have used to learn and implement.</p>
 							<p>On my <a href="https://www.youtube.com/@CloudFiBeats"><strong>Youtube</strong></a> is where I will be sharing the creative works that I produced using AWS LAMBDA, Amazon Polly, Google Cloud Text-to-Speech AI, and Generative AI. Enjoy chill LoFi beats, but also study crams that I used, which I hope you find useful.</p>
 							<p>In addition to giving you a full view into <a href="https://github.com/catinahat85/cloudfilive"><strong>my stack and workflow</strong></a>, there will be project ideas for you to gain the skills needed to become competent cloud or cloud-native engineers..</p>
 						</div>
