--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 							<h3>My Blog</h3>
 							<p>With Project Ideas, Tutorials, and opinions on technology and developments.</p>
 							<ul class="actions special">
-								<li><a href="https://cloudfiblog7.wordpress.com/" class="button">See My Rants</a></li>
+								<li><a href="blog.html" class="button">See My Rants</a></li>
 							</ul>
 						</div>
 					</div>
