--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic08.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/pico.jpg" alt="" /></span>
 							<h3>My Blog</h3>
 							<p>With Project Ideas, Tutorials, and opinions on technology and developments.</p>
 							<ul class="actions special">
