--- a/blog.html
+++ b/blog.html
@@ -104,20 +104,25 @@
 				</div>
 			</section>
 
-		<!-- Four -->
-			<section id="four" class="main style2 special">
-				<div class="container">
-					<header class="major">
-						<h2>Ready to check me out?</h2>
-					</header>
-					<p>Subscribe, Listen, Learn or Collaborate</p>
-					<ul class="actions special">
-						<li><a href="https://chatgpt.com/g/g-rf6wyH9MH-when-2-k8s" class="button wide primary">Try My Custom K8s GPT</a></li>
-						<li><a href="https://github.com/catinahat85/cloudfilive" class="button wide primary">See How I Made This Site</a></li>
-						<li><a href="https://www.youtube.com/@CloudFiBeats" class="button wide">Study Crams on Youtube</a></li>
 					</ul>
 				</div>
 			</section>
+
+		<!-- Footer -->
+			<section id="footer">
+				<ul class="icons">
+					<li><a href="https://www.youtube.com/@CloudFiBeats" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
+					<li><a href="https://github.com/catinahat85" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://x.com/beatsinthecloud" class="icon brands alt fa-twitter"><span class="label">Twitter/X</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; CloudFi. All rights reserved.</li>
+				</ul>
+			</section>
+
+
+	</body>
+</html>
 
 		<!-- Footer -->
 			<section id="footer">
