--- a/blog.html
+++ b/blog.html
@@ -33,13 +33,7 @@
 						<h2>CloudFi Blog</h2>
 						<p>Explore articles on cloud computing, tech trends, and personal projects.</p>
 					</header>
-					<section id="three" class="main style1 special">
-				<div class="container">
-					<header class="major">
-						<h2>I Also Make Children's Books</h2>
-						<p>Ease Into Kubernetes Series</p>
-					</header>
-					<p>Because it was too complicated to explain to my kids exactly what I did.</p>
+
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
@@ -65,17 +59,102 @@
 								<li><a href="https://github.com/catinahat85/gitgudatcloudnative/tree/main/ebooks" class="button">Free Downloads</a></li>
 							</ul>
 						</div>
-					</div>
-				
-			</section>
-			<section id="three" class="main style1 special">
-				<div class="container">
-					<header class="major">
-						<h2>Browse Content</h2>
-						<p>Music, Learn or Projects</p>
-					</header>
-					<p>Learn about cloud and cloud native while having fun</p>
-					<div class="row gtr-150">
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic07.jpg" alt="" /></span>
+							<h3>CloudFiBeats</h3>
+							<p>Youtube channel. My own beats, but using tools like Google Cloud TTS, AWS Polly, AWS Lambda</p>
+							<ul class="actions special">
+								<li><a href="https://www.youtube.com/@CloudFiBeats" class="button">Subscribe Now</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic09.jpg" alt="" /></span>
+							<h3>Learning Resources</h3>
+							<p>Collected courses, tutorials, videos about containers, kubernetes, cloud computing and more. Learn for free.</p>
+							<ul class="actions special">
+								<li><a href="https://github.com/catinahat85/gitgudatcloudnative" class="button">Start Learning</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pico.jpg" alt="" /></span>
+							<h3>My Blog</h3>
+							<p>With Project Ideas, Tutorials, and opinions on technology and developments.</p>
+							<ul class="actions special">
+								<li><a href="blog.html" class="button">See My Rants</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
+							<h3>Made for Children</h3>
+							<p>Cloud computing and Containers made simple. The focus was to make these books feel like Kubernetes explained, but ELI5. You'll get it, and they'll love it.</p>
+							<ul class="actions special">
+								<li><a href="https://www.amazon.com/Ease-Into-Kubernetes/dp/B0CLKVVZ55" class="button">See on Amazon</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
+							<h3>Fun and Quirky</h3>
+							<p>There's action, adventure, magic, humor, and learning. These stories will spark curiosity and inspire the next generation of engineers and cloud-native heroes!</p>
+							<ul class="actions special">
+								<li><a href="https://a.co/d/eA4denP" class="button">See Latest Book</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<h3>Open Source</h3>
+							<p>Published under CC-BY 4.0, using CNCF-owned characters in conjunction with my original characters, but I would love to see your takes on them. Just give attribution.</p>
+							<ul class="actions special">
+								<li><a href="https://github.com/catinahat85/gitgudatcloudnative/tree/main/ebooks" class="button">Free Downloads</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic07.jpg" alt="" /></span>
+							<h3>CloudFiBeats</h3>
+							<p>Youtube channel. My own beats, but using tools like Google Cloud TTS, AWS Polly, AWS Lambda</p>
+							<ul class="actions special">
+								<li><a href="https://www.youtube.com/@CloudFiBeats" class="button">Subscribe Now</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic09.jpg" alt="" /></span>
+							<h3>Learning Resources</h3>
+							<p>Collected courses, tutorials, videos about containers, kubernetes, cloud computing and more. Learn for free.</p>
+							<ul class="actions special">
+								<li><a href="https://github.com/catinahat85/gitgudatcloudnative" class="button">Start Learning</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pico.jpg" alt="" /></span>
+							<h3>My Blog</h3>
+							<p>With Project Ideas, Tutorials, and opinions on technology and developments.</p>
+							<ul class="actions special">
+								<li><a href="blog.html" class="button">See My Rants</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
+							<h3>Made for Children</h3>
+							<p>Cloud computing and Containers made simple. The focus was to make these books feel like Kubernetes explained, but ELI5. You'll get it, and they'll love it.</p>
+							<ul class="actions special">
+								<li><a href="https://www.amazon.com/Ease-Into-Kubernetes/dp/B0CLKVVZ55" class="button">See on Amazon</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
+							<h3>Fun and Quirky</h3>
+							<p>There's action, adventure, magic, humor, and learning. These stories will spark curiosity and inspire the next generation of engineers and cloud-native heroes!</p>
+							<ul class="actions special">
+								<li><a href="https://a.co/d/eA4denP" class="button">See Latest Book</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<h3>Open Source</h3>
+							<p>Published under CC-BY 4.0, using CNCF-owned characters in conjunction with my original characters, but I would love to see your takes on them. Just give attribution.</p>
+							<ul class="actions special">
+								<li><a href="https://github.com/catinahat85/gitgudatcloudnative/tree/main/ebooks" class="button">Free Downloads</a></li>
+							</ul>
+						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic07.jpg" alt="" /></span>
 							<h3>CloudFiBeats</h3>
@@ -101,24 +180,15 @@
 							</ul>
 						</div>
 					</div>
-				</div>
+				
 			</section>
+
 
 					</ul>
 				</div>
 			</section>
 
 		<!-- Footer -->
-			<section id="footer">
-				<ul class="icons">
-					<li><a href="https://www.youtube.com/@CloudFiBeats" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
-					<li><a href="https://github.com/catinahat85" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://x.com/beatsinthecloud" class="icon brands alt fa-twitter"><span class="label">Twitter/X</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; CloudFi. All rights reserved.</li>
-				</ul>
-			</section>
 
 
 	</body>
