--- a/blog.html
+++ b/blog.html
@@ -31,16 +31,16 @@
 				<div class="container">
 					<header class="major">
 						<h2>CloudFi Blog</h2>
-						<p>Explore articles on cloud computing, tech trends, and personal projects.</p>
+						<p>Explore articles on cloud computing, projects, opnions etc.</p>
 					</header>
 
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Made for Children</h3>
-							<p>Cloud computing and Containers made simple. The focus was to make these books feel like Kubernetes explained, but ELI5. You'll get it, and they'll love it.</p>
+							<span class="image fit"><img src="images/pico.jpg" alt="" /></span>
+							<h3>Who Am I?</h3>
+							<p>Ok, ok ok.....I really get into why I made this site....</p>
 							<ul class="actions special">
-								<li><a href="https://www.amazon.com/Ease-Into-Kubernetes/dp/B0CLKVVZ55" class="button">See on Amazon</a></li>
+								<li><a href="posts/9-26-24.html" class="button">See Post</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
