--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>CloudFi</title>
+		<title>BeatsintheCloud</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,7 +18,7 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
-					<h1>Welcome to <strong>CloudFi</strong>, my personal project<br />
+					<h1>Welcome to <strong>BeatsintheCloud</strong>, my personal project<br />
 					sharing my knowledge of cloud technologies with <a href="https://www.youtube.com/@CloudFiBeats"><strong>music</strong></a>.</h1>
 					<p>See what I'm cooking on <a href="https://github.com/catinahat85"><strong>my Github</strong></a>.</p>
 					<ul class="actions special">
