--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
 					<h1>Welcome to <strong>BeatsintheCloud</strong>, my personal project<br />
-					sharing my knowledge of cloud technologies with <a href="https://www.youtube.com/@CloudFiBeats"><strong>music</strong></a>.</h1>
+					sharing my knowledge of cloud technologies with <a href="https://www.youtube.com/@Beatsinthecloud"><strong>music</strong></a>.</h1>
 					<p>See what I'm cooking on <a href="https://github.com/catinahat85"><strong>my Github</strong></a>.</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">See More</a></li>
@@ -66,7 +66,7 @@
 								and Cloud Project Ideas</h2>
 							</header>
 							<p>I'll be sharing <a href="https://github.com/catinahat85/gitgudatcloudnative"><strong>my learning resources</strong></a>, including ones I have used to learn and implement.</p>
-							<p>On my <a href="https://www.youtube.com/@CloudFiBeats"><strong>Youtube</strong></a> is where I will be sharing the creative works that I produced using AWS LAMBDA, Amazon Polly, Google Cloud Text-to-Speech AI, and Generative AI. Enjoy chill LoFi beats, but also study crams that I used, which I hope you find useful.</p>
+							<p>On my <a href="https://www.youtube.com/@Beatsinthecloud"><strong>Youtube</strong></a> is where I will be sharing the creative works that I produced using AWS LAMBDA, Amazon Polly, Google Cloud Text-to-Speech AI, and Generative AI. Enjoy chill LoFi beats, but also study crams that I used, which I hope you find useful.</p>
 							<p>In addition to giving you a full view into <a href="https://github.com/catinahat85/cloudfilive"><strong>my stack and workflow</strong></a>, there will be project ideas for you to gain the skills needed to become competent cloud or cloud-native engineers..</p>
 						</div>
 					</div>
@@ -119,10 +119,10 @@
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic07.jpg" alt="" /></span>
-							<h3>CloudFiBeats</h3>
+							<h3>BeatsintheCloud</h3>
 							<p>Youtube channel. My own beats, but using tools like Google Cloud TTS, AWS Polly, AWS Lambda</p>
 							<ul class="actions special">
-								<li><a href="https://www.youtube.com/@CloudFiBeats" class="button">Subscribe Now</a></li>
+								<li><a href="https://www.youtube.com/@Beatsinthecloud" class="button">Subscribe Now</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
@@ -155,7 +155,7 @@
 					<ul class="actions special">
 						<li><a href="https://chatgpt.com/g/g-rf6wyH9MH-when-2-k8s" class="button wide primary">Try My Custom K8s GPT</a></li>
 						<li><a href="https://github.com/catinahat85/cloudfilive" class="button wide primary">See How I Made This Site</a></li>
-						<li><a href="https://www.youtube.com/@CloudFiBeats" class="button wide">Study Crams on Youtube</a></li>
+						<li><a href="https://www.youtube.com/@Beatsinthecloud" class="button wide">Study Crams on Youtube</a></li>
 					</ul>
 				</div>
 			</section>
@@ -234,9 +234,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</ol>
 								<h5>Icons</h5>
 								<ul class="icons">
-									<li><a href="https://www.youtube.com/@CloudFiBeats" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+									<li><a href="https://www.youtube.com/@Beatsinthecloud" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
 									<li><a href="https://github.com/catinahat85" class="icon brands fa-github"><span class="label">Github</span></a></li>
-									<li><a href="https://x.com/jkhzcloudfi/" class="icon brands fa-twitter"><span class="label">Twitter/X</span></a></li>
+									<li><a href="https://x.com/beatsinthecloud/" class="icon brands fa-twitter"><span class="label">Twitter/X</span></a></li>
 								</ul>
 							</div>
 						</div>
@@ -480,9 +480,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="https://www.youtube.com/@CloudFiBeats" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
+					<li><a href="https://www.youtube.com/@Beatsinthecloud" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
 					<li><a href="https://github.com/catinahat85" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://x.com/jkhzcloudfi" class="icon brands alt fa-twitter"><span class="label">Twitter/X</span></a></li>
+					<li><a href="https://x.com/beatsinthecloud" class="icon brands alt fa-twitter"><span class="label">Twitter/X</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>The "Ease Into Kubernetes" books are creative works and are neither made, endorsed, nor sanctioned by the Cloud Native Computing Foundation (CNCF) or The Linux Foundation. The content and narratives in this book are the product of the author's imagination and are used fictitiously. Any resemblance to actual events, locales, real persons, living or dead, or actual entities is purely coincidental. This book does not imply any affiliation with or endorsement by the CNCF or The Linux Foundation.
