--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pico.jpg" alt="" /></span>
 							<h3>My Blog</h3>
-							<p>With Project Ideas, Tutorials, and opinions on technology and developments.</p>
+							<p>With Project Ideas, Tutorials, and opinions on tech and developments.</p>
 							<ul class="actions special">
 								<li><a href="/blog" class="button">See My Rants</a></li>
 							</ul>
