--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
 					<h1>Welcome to <strong>BeatsintheCloud</strong>, my personal project<br />
-					sharing my <a href="/blog" class="button">knowledges</a> of cloud technologies with <a href="https://www.youtube.com/@Beatsinthecloud"><strong>music</strong></a>.</h1>
+					sharing my <a href="/blog"><strong>knowledges</a> of cloud technologies with <a href="https://www.youtube.com/@Beatsinthecloud"><strong>music</strong></a>.</h1>
 					<p>See what I'm cooking on <a href="https://github.com/catinahat85"><strong>my Github</strong></a>.</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">See More</a></li>
@@ -35,7 +35,7 @@
 							<header class="major">
 								<h2>Who Am I?</h2>
 							</header>
-							<p>I'm a learning Cloud Engineer, experienced in Linux, AWS, GCP, Azure, OCI, Databricks, Generative AI, Docker, and Kubernetes. I trained my own GPT model for SMEs to evaluate if K8s is right for them. <a href="/blog" class="button">This site is over-engineered with K8s</a>, automated CI/CD, monitoring and observability.</p>
+							<p>I'm a learning Cloud Engineer, experienced in Linux, AWS, GCP, Azure, OCI, Databricks, Generative AI, Docker, and Kubernetes. I trained my own GPT model for SMEs to evaluate if K8s is right for them. <a href="https://beatsinthe.cloud/blog/deploying-my-site-on-kubernetes-with-github-actions-and-argocd/"><strong>This site is over-engineered with K8s</a>, automated CI/CD, monitoring and observability.</p>
 							<p>Why would I do that? Because of my passion for learning, teaching, AI, and music, and thought it would be helpful to combine them all, since not all of us learn in the same way, have access to the same resources, and need extra tools to learn. I want to empower the unempowered through tech.</p>
 							<p>One of my missions is to bring knowledge of cloud-native computing to the underprivileged, including Latino/a/e people globally and to minorities in the USA, as it is a field where we can step up and make a difference due to the lack of standardized education.</p>
 						</div>
