--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+<meta name="description" content="Cloud Computing & Cloud Native News, Opinion, Learning Music & Culture">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PRJMML1EDS"></script>
 <script>
